# OBS---SEAFLOR-MURARA

./: NCM_SH4 - atualizado 03.06.2026.xlsx  SEAFLOR_2026_Nota_Tecnica_Tarifas.docx  SEAFLOR_2026_Roteiro_Apresentacao.docx  SEAFLOR_2026_Roteiro_Apresentacao.md  decomp_out.txt
referencia/: .config  .gitignore  README.md  criar_relatorios.bat  main.py  pyproject.toml  requirements.txt
referencia/Notebooks/: comex_pipeline_v1.ipynb
referencia/Scripts/: __init__.py  api.ipynb  api_relatorio_excel.py  bronze_ingest.py  build_gold_report_compatible.py  categorias.txt  datamart_utils.py  datamarts.py  filtrando_ncm_sc.ipynb  paths.py  relatorio_excel.py  run_pipeline.py  validate_report_data.py
referencia/design_system_paineis_indicadores/: README.md  index.html  plan.md
referencia/design_system_paineis_indicadores/components/: badge.css  chart-container.css  dashboard-panel.css  data-table.css  filter-dropdown.css  index.css  kpi-card.css  segmented-control.css  sidebar-button.css
referencia/design_system_paineis_indicadores/docs/: css-import-guidelines.md  figma-map.md  react-adoption.md  token-map.md  visual-qa-checklist.md
referencia/design_system_paineis_indicadores/raw-figma-css/: README.MD
referencia/design_system_paineis_indicadores/templates/: dashboard-grid-1.css  index.css
referencia/design_system_paineis_indicadores/tokens/: colors.css  index.css  layout.css  radius.css  shadows.css  spacing.css  typography.css
referencia/pipeline-src/: project.py
referencia/pipeline-src/common/: __init__.py
referencia/pipeline-src/reporting/: __init__.py  (+4 more)
(+95 files in other folders)
