[project]
name = "dados-comex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "fastapi>=0.121.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "xlsxwriter>=3.2.5",
]
